--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Apache/CompressClientFixup version 0.02
+Apache/CompressClientFixup version 0.03
 =======================================
 
 
@@ -107,13 +107,14 @@ Microsoft states that this problem was first corrected in Internet Explorer 6 Se
 
 Since then, later versions of MSIE are not supposed to carry this bug at all.
 
-Since the effect is not investigated in appropriate details for earlier versions of MSIE,
-this version of the handler does not restrict compression for any MSIE.
+Since the effect is not investigated in appropriate details,
+this version of the handler does not restrict compression for MSIE,
+except HTTPS.
 
-=head2 Netscape 4.XX
+=head2 Netscape 4.X
 
 This is C<HTTP/1.0> client.
-Netscape 4.XX is failing to
+Netscape 4.X is failing to
 
 =over 4
 
@@ -131,7 +132,7 @@ See detailed description of these bugs at
 http://www.schroepl.net/projekte/mod_gzip/browser.htm - Michael Schroepl's Web Site.
 
 This version serves cases (a) and (b) as default for this type of browsers.
-This version contains commented code to serve cases (c) and (d).
+This version serves cases (c) and (d) conditionally.
 
 =head2 Partial Request from Any Web Client
 
